# ScreenCapture

./: pyproject.toml  screencapture.py
