[tool.poetry]
name = "screencapture"
version = "0.1.0"
description = "Capture screen"
authors = ["Jonathan Schaffner <jonathan.schaffner@students.fhnw.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
opencv-python = "^4.6.0"
mss = "^6.1.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
